fix(price-table): middle element visibility

--- a/src/app/house/components/knx-house-hold-card-extension/house-hold-card-extension.component.scss
+++ b/src/app/house/components/knx-house-hold-card-extension/house-hold-card-extension.component.scss
@@ -22,7 +22,7 @@
   }
 
   .knx-center-element__truncate {
-    width: 80px;
+    width: 150px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
